--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,32 @@
 
 services:
-  postgres:
+  db:
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: skill_matrix
-      POSTGRES_USER: skill_user
-      POSTGRES_PASSWORD: skill_password
-    ports:
-      - "5432:5432"
+      POSTGRES_DB: skillmatrix
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U skill_user -d skill_matrix"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+
+  redis:
+    image: redis:7-alpine
 
   backend:
     build: .
     ports:
-      - "5000:5000"
+      - "8000:8000"
     environment:
-      DATABASE_URL: postgresql://skill_user:skill_password@postgres:5432/skill_matrix
-      SECRET_KEY: ${SECRET_KEY:-dev-secret-key-change-in-production}
-      JWT_SECRET_KEY: ${JWT_SECRET_KEY:-jwt-secret-key-change-in-production}
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/skillmatrix
+      REDIS_URL: redis://redis:6379/0
+      ENVIRONMENT: development
+      PYTHONPATH: /code  # Важно!
     volumes:
-      - .:/app
+      - ./app:/code/app  # Монтируем в /code/app
     depends_on:
-      postgres:
-        condition: service_healthy
-    command: >
-      sh -c "python run.py"
+      - db
+      - redis
 
 volumes:
   postgres_data:
