--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,26 @@
-# Основные зависимости
-Flask==3.0.0
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.5
-Flask-CORS==4.0.0
-Flask-JWT-Extended==4.6.0
-Flask-Bcrypt==1.0.1
-python-dotenv==1.0.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+sqlalchemy==2.0.23
+alembic==1.12.1
 psycopg2-binary==2.9.9
-
-# Сериализация
-marshmallow==3.20.1
-marshmallow-sqlalchemy==1.0.0
-
-# Валидация
-email-validator==2.1.0
-WTForms==3.1.0
-
-# Экспорт/отчеты
-pandas==2.1.4
-openpyxl==3.1.2
-
-# Утилиты
-python-dateutil==2.8.2
-pytz==2023.3
-
-# Асинхронность (для уведомлений)
+pydantic==2.5.0
+pydantic-settings==2.1.0
+python-dotenv==1.0.0
+redis
 celery==5.3.4
-redis==5.0.1
-
-# Документация API (опционально)
-flasgger==0.9.7.1
-
-# Тестирование
-pytest==7.4.3
-pytest-cov==4.1.0
-factory-boy==3.3.0
+email-validator==2.1.0
+python-dateutil==2.8.2
+pandas==2.1.3
+openpyxl==3.1.2
+python-magic==0.4.27
+httpx==0.25.1
+pillow==10.1.0
+boto3==1.34.0
+fastapi-limiter==0.1.5
+slowapi==0.1.8
+prometheus-fastapi-instrumentator==6.1.0
+structlog==23.2.0
+sentry-sdk[fastapi]==1.38.0
